Updates from Overleaf

--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -1,19 +1,18 @@
 \subsection{Purpose}
 The purpose of the Student\&Company (S\&C) Platform is to create a system that allows Students to find Internships to enhance their education and improve their curriculum, while allowing Companies to find suitable candidates for their internship programs. All of this is done in a simple and efficient way by providing a series of tools to help both parties in the process.\\
-S\&C will support the entire lifecycle of the Internship process for both Students and Companies: from the initial matchmaking that can be done automatically by the system through a proprietary Recommendation Process, or obtained by a Student with a Spontaneous Application to a specific internship offer, to the final selection process done through structured interviews created and submitted by Companies directly on the platform.\\% 
-In the meantime, Student\&Company will also provide a series of Suggestions to improve CVs published by Students and internship offers published by Companies. The platform will also allow the Universities of Students who are actually doing an internship to monitor the progress of such activities and handle any Complaints if necessary, even by terminating the internship if no other solution to the problem can be found.
+S\&C will support the entire lifecycle of the Internship process for both Students and Companies. The matchmaking can be done both  automatically by the system through a proprietary Recommendation Process or by a Student with a Spontaneous Application to a specific internship offer. The final selection process is done through interviews created and submitted by Companies directly on the platform.\\
+In the meantime, Student\&Company will also provide Students and Companies with a series of suggestions to improve their respectively published CVs and internship offers. The platform will also allow Universities whose Students are actually doing an internship to monitor the progress of such activities and handle any Complaints that may arise, even by terminating the internship if no other solution to the problem can be found.
 \subsubsection{Goals}
 \begin{enumerate}[label={\color{titleColor}[G\arabic*]}]
 \item Companies would like to advertise the internships they offer.
 \item Students would like to autonomously candidate for available internships.
 \item Students would like to be matched with internships they might be interested in.
 \item Companies would like to perform interviews with suitable students.
-\item Students and companies would like to complain, communicate problems, and provide information about an Ongoing Internship.
-\item Students and companies would like to be provided with suggestions about how to improve their submission;
-\item Universities would like to handle complaints about Ongoing Internships.
+\item Students and companies would like to complain, communicate problems, and provide information about an ongoing internship.
+\item Students and companies would like to be provided with suggestions about how to improve their submission
+\item Universities would like to handle complaints about ongoing internships.
 \item Students would like to choose which internship to attend from among those for which they passed the interview.
 \item Companies would like to select students for the internship position among those who passed the interview.
- 
 \end{enumerate}
 
 
@@ -71,13 +70,13 @@ The main features to provide in order to satisfy all the goals are the following
 \item A company wants to interview a student.
 \item A company wants to manage (create, visualize, send, evaluate) its interviews.
 \item A student wants to answer questions concerning an interview.
-\item A company wants to complain, communicates problem, provide information about an Ongoing Internship.
-\item A student wants to complain, communicates problem, provide information about an Ongoing Internship.
+\item A company wants to complain, communicates problem, provide information about an ongoing internship.
+\item A student wants to complain, communicates problem, provide information about an ongoing internship.
 \item A student wants to receive suggestions on how to improve his CV.
 \item A company wants to receive suggestions on how to improve their internship offers.
-\item A university wants to monitor an Ongoing Internship that involves one of their students.
-\item A university wants to handle complaints about an Ongoing Internship that involves one of their students.
-\item A university wants to interrupt an Ongoing Internship that involves one of their students.
+\item A university wants to monitor an ongoing internship that involves one of their students.
+\item A university wants to handle complaints about an ongoing internship that involves one of their students.
+\item A university wants to interrupt an ongoing internship that involves one of their students.
 \item A company wants to choose from the students they are interested in the ones to whom they will offer the internship position.
 \item A student wants to choose an internship position offer.
 
@@ -96,8 +95,8 @@ The main features to provide in order to satisfy all the goals are the following
 \item A student answers questions related to an interview.
 \item A company sends to a student who passed the interview an internship position offer.
 \item A student accepts an internship position offer.
-\item A student or company complains, communicates problem, provides information about an Ongoing Internship.
-\item A university answers to complaints about Ongoing Internships that involves one of their students.
+\item A student or company complains, communicates problems, provides information about an ongoing internship.
+\item A university answers to complaints about ongoing internships that involves one of their students.
 \item A university interrupts an internship that involves one of their students.
 \end{enumerate}
 \paragraph{Shared - By Machine}
@@ -105,11 +104,11 @@ The main features to provide in order to satisfy all the goals are the following
     \item The platform shows to students available internships.
 \item The platform shows to companies available candidates for their internships.
 \item The platform shows to students and companies information about their recommendations and spontaneous applications.
-\item The platform asks for feedback to improve the recommendation research mechanism.
+\item The platform asks for feedbacks to improve the recommendation research mechanism.
 \item The platform notifies students and companies when a suitable recommendation involving them is found.
 \item The platform shows to companies information about their interviews.
 \item The platform provides students and companies suggestions about how to formulate better respectively their CV and internship offers.
-\item The platform shows to universities information about an Ongoing Internship.
+\item The platform shows to universities information about an ongoing internship.
 \item The platform notifies companies when there is a new spontaneous application regarding one of their internships.
 \item The platform notifies a student when a company accepts his spontaneous application.
 \item The platform notifies a student when a company sends to him a new interview.
@@ -117,14 +116,14 @@ The main features to provide in order to satisfy all the goals are the following
 \item The platform notifies a student when a company sends him an internship offer.
 \item The platform notifies a company when a student accepts his internship position offer.
 \item The platform notifies the involved student and the company when a university terminates their internship.
-\item The platform notifies the university when there is a new complaint or problem about an Ongoing Internship regarding one of their students.
+\item The platform notifies the university when there is a new complaint or problem about an ongoing internship regarding one of their students.
 
 \end{enumerate}
 \subsection{Definitions, Acronyms, Abbreviations} 
 This section offers explanations of terminology to elucidate the terms, acronyms and abbreviations used throughout the document, facilitating easy comprehension and reference for the readers.
 \subsubsection{Definition}
 \begin{itemize}
-    \item \textcolor{titleColor}{\textbf{University}\label{def:university}}: An institution that is registered on the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{University}\label{def:university}}: A university that is registered on the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Company}\label{def:company}}: A company that is registered on the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Student}\label{def:student}}: A person who is currently enrolled in a University and is registered on the S\&C platform.
     \item \textcolor{titleColor}{\textbf{User}\label{def:user}}: Any registered entity on the S\&C platform.
@@ -133,7 +132,7 @@ This section offers explanations of terminology to elucidate the terms, acronyms
     }
     \item \textcolor{titleColor}{\textbf{Recommendation Process}}\label{def:recommendationProcess}: The process of matching a Student with an Internship offered by a Company based on the Student's CV and the Internship's requirements made by the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Recommendation/Match}\label{def:match}}: The result of the Recommendation Process. It is the match between a Student and an Internship.
-    \item \textcolor{titleColor}{\textbf{Spontaneous Application}\label{def:spontaneousApplication}}: The process of a Student manually applying for an Internship that was not matched through the Recommendation Process.
+    \item \textcolor{titleColor}{\textbf{Spontaneous Application}\label{def:spontaneousApplication}}: The process of a Student spontaneously applying for an Internship that was not matched through the Recommendation Process.
     \item \textcolor{titleColor}{\textbf{Interview}\label{def:Interview}}: The process of evaluating a Student's application for an Internship done by a Company through the S\&C platform. 
     \item \textcolor{titleColor}{\textbf{Feedback}\label{def:Feedback}}: Information provided by Participant to the S\&C platform to improve the Recommendation Process.
     \item \textcolor{titleColor}{\textbf{Internship Position Offer}\label{def:internshipPositionOffer}}: The formal offer of an internship position presented to a student who has successfully passed the Interview, who can decide to accept or reject it.
@@ -181,7 +180,7 @@ This section offers explanations of terminology to elucidate the terms, acronyms
     \begin{tabular}{|c|c|c|}
         \hline
         \textbf{Revised on} & \textbf{Version} & \textbf{Description}\\ \hline
-        ?-?-2024 & 1.0     & Initial release of the document \\ \hline
+        22-12-2024 & 1.0     & Initial release of the document \\ \hline
     \end{tabular}
     \caption{Document Revision History}
     \label{tab:revision_history_table}
@@ -189,19 +188,19 @@ This section offers explanations of terminology to elucidate the terms, acronyms
 
 \subsection{Reference Documents}
 \begin{itemize}
-  \item Assignment RDD AY 2024-2025
-  \item Software Engineering 2 A.Y. 2024/2025 Slides “CreatingRASD”
-  \item IEEE Software Requirements Specification Template
-  \item Alloy Documentations: \url{alloy.readthedocs.io}
+  \item Assignment RDD AY 2024-2025 [\ref{appendix:assignement}]
+  \item Software Engineering 2 A.Y. 2024/2025 Slides “CreatingRASD” 
+  \item IEEE Software Requirements Specification Template \cite{720574}
+
 \end{itemize}
 
 
 \subsection{Document Structure}
 \begin{enumerate}
     \item \textcolor{titleColor}{\textbf{Introduction}}: This section provides an overview of the document and the system. Here the purpose of the platform is explained, along with the goals and phenomena of the system. Finally, essential definitions are provided.
-    \item \textcolor{titleColor}{\textbf{Overall Description}}: In this section, a high-level perspective of the system is provided, describing its overall purpose, functionality, and \hyperref[def:user]{User} interactions. It includes an outline of the system's intended features, user profiles, and assumptions about the domain.
-    \item \textcolor{titleColor}{\textbf{Specific Requirements}}: In this section, we focus on the technical and functional details of the system. Here, the external interfaces are specified as well as the functional and non-functional requirements of the system. Diagrams, such as use case and sequence diagrams, have been used to provide a visual representation of the system's functionality.
-    \item \textcolor{titleColor}{\textbf{Alloy}}: This section illustrates code and diagrams of the Alloy formal specification language that has been used to ensure the consistency and correctness of the system's formalized requirements.
-    \item \textcolor{titleColor}{\textbf{Effort Spent}}: This section provides an overview of the time spent by each group member on the project.
+    \item \textcolor{titleColor}{\textbf{Overall Description}}: In this section, a high-level perspective of the system is provided, describing its overall purpose, functionality, and \hyperref[def:user]{User} interactions. It includes an outline of the intended features of the system, user profiles, and assumptions about the domain.
+    \item \textcolor{titleColor}{\textbf{Specific Requirements}}: In this section, we focus on the technical and functional details of the system. Here, the external interfaces are specified as well as the functional and non-functional requirements of the system. Diagrams, such as use cases and sequence diagrams, provide a visual representation of the system's functionality.
+    \item \textcolor{titleColor}{\textbf{Alloy}}: This section presents the code and the generated diagrams created using Alloy, a formal specification language that has been used to ensure the consistency and correctness of some core system's requirements.
+    \item \textcolor{titleColor}{\textbf{Effort Spent}}: This section provides an overview of the time that each group member spent on the project.
     \item \textcolor{titleColor}{\textbf{References}}: This section provides a list of references used in the document.
 \end{enumerate}
