--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -7,6 +7,8 @@
 \usepackage{alloy-style}
 \setlength{\headheight}{13.6pt}
 
+
+
 \begin{document}
 
     %TITLE PAGE
@@ -38,10 +40,10 @@
         \begin{tabularx}{\textwidth}{>{\raggedleft\arraybackslash}p{0.3\textwidth}>{\raggedright\arraybackslash}X}
             \hline
             \textbf{Deliverable:} & RASD \\ 
-            \textbf{Title:} & Requirement Analysis and Verification Document \\ 
+            \textbf{Title:} & Requirement Analysis and Specification Document \\ 
             \textbf{Authors:} & Lorenzo Ricci, Matteo Giovanni Paoli, Samuele Grisoni \\ 
             \textbf{Version:} & 1.0 \\ 
-            \textbf{Date:} & insert date here \\ 
+            \textbf{Date:} & 22-12-2024 \\ 
             \textbf{Download page:} & \url{https://github.com/Slaitroc/RicciPaoliGrisoni/} \\ 
             \textbf{Copyright:} & Copyright © 2024, Ricci, Paoli, Grisoni – All rights reserved \\ \hline
         \end{tabularx}
@@ -52,12 +54,12 @@
     \setcounter{page}{2}
     %------------------------------------------------------------------------------------------------------------------------------------------------
     \newpage
-    \addcontentsline{toc}{section}{Table of Contents}
+    \addcontentsline{toc}{section}{Contents}
     \tableofcontents
     \newpage
-    \addcontentsline{toc}{section}{List of Figures}
     \listoffigures
-    \addcontentsline{toc}{section}{List of Tables}
+    \newpage
+
     \listoftables
     %------------------------------------------------------------------------------------------------------------------------------------------------
     \clearpage
@@ -86,9 +88,47 @@
     \input{Files/effort}
     %------------------------------------------------------------------------------------------------------------------------------------------------
     \clearpage
-    \addcontentsline{toc}{section}{References}
-    \bibliographystyle{plain}
-    \bibliography{main}
+    \section{References} % Sezione numerata per la bibliografia
+    \printbibliography[heading=none]
+
     %------------------------------------------------------------------------------------------------------------------------------------------------
+    \clearpage
+    \appendix
+    \section{Assignement RDD AY 2024-2025}
+    \label{appendix:assignement}
+    Students\&Companies (S\&C) is a platform that helps match university students looking for internships
+    and companies offering them. The platform should ease the matching between students and
+    companies based on:
+    \begin{itemize}
+        \item the experiences, skills and attitudes of students, as listed in their CVs;
+        \item the projects (application domain, tasks to be performed, relevant adopted technologies-if any etc.) and terms offered by companies (for example, some company might offer paid internships and/or provide both tangible and intangible benefits, such as training, mentorships, etc.).
+    \end{itemize}
+The platform is used by companies to advertise the internships that they offer, and by students to look
+for internships. Students can be proactive when they look for internships (i.e., they initiate the process,
+go through the available internships, etc.). Moreover, the system also has mechanisms to inform
+students when an internship that might interest them becomes available and can inform companies
+about the availability of student CVs corresponding to their needs. We refer to this process as
+“recommendation”.
+Recommendation in S\&C can employ mechanisms of various levels of sophistication to match students
+with internships, from simple keyword searching, to statistical analyses based on the characteristics of
+students and internships.
+When suitable recommendations are identified and accepted by the two parties, a contact is
+established. After a contact is established, a selection process starts. During this process, companies
+interview students (and collect answers from them, possibly through structured questionnaires) to
+gauge their fit with the company and the internship. S\&C supports this selection process by helping
+manage (set up, conduct, etc.) interviews and also finalize the selections.
+To feed statistical analysis applied during recommendation, S\&C collects various kinds of information
+regarding the internships, for example by asking students and companies to provide feedback and
+suggestions.
+Moreover, S\&C should be able to provide suggestions both to companies and to students regarding
+how to make their submissions (project descriptions for companies and CVs for students) more
+appealing for their counterparts.
+In general, S\&C provides interested parties with mechanisms to keep track and monitor the execution
+and the outcomes of the matchmaking process and of the subsequent internships from the point of
+view of all interested parties. For example, it provides spaces where interested parties can complain,
+communicate problems, and provide information about the current status of the ongoing internship.
+The platform is used by students at different universities. Universities also need to monitor the situation
+of internships; in particular, they are responsible for handling complaints, especially ones that might
+require the interruption of the internship.
     
 \end{document}
